--- a/casamento_catalao_diginotas/extract.ipynb
+++ b/casamento_catalao_diginotas/extract.ipynb
@@ -11,8 +11,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-21T03:17:17.595223Z",
-     "start_time": "2024-10-21T03:17:17.591672Z"
+     "end_time": "2024-10-24T17:11:41.880837Z",
+     "start_time": "2024-10-24T17:11:41.763815Z"
     }
    },
    "cell_type": "code",
@@ -24,13 +24,13 @@
    ],
    "id": "6239c33979914b14",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-21T03:32:34.233079Z",
-     "start_time": "2024-10-21T03:32:34.227577Z"
+     "end_time": "2024-10-24T17:11:45.501035Z",
+     "start_time": "2024-10-24T17:11:45.491796Z"
     }
    },
    "cell_type": "code",
@@ -85,19 +85,19 @@
    ],
    "id": "710f3a1a15fbb4dd",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-21T04:05:31.918638Z",
-     "start_time": "2024-10-21T04:05:29.701706Z"
+     "end_time": "2024-10-24T17:12:31.034294Z",
+     "start_time": "2024-10-24T17:12:28.476656Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Exemplo de uso\n",
-    "pasta_pdfs = \"C:\\\\Users\\\\josed\\\\Codes\\\\Dados_diginotas\\\\catalao_scripts\\\\casamento_catalao\\\\docs\\\\ocred\\\\B070\"  # Substitua pelo caminho da sua pasta\n",
+    "pasta_pdfs = \"C:\\\\Users\\\\josed\\\\OneDrive\\\\Documentos\\\\CASAMENTO_OCRED\\\\CASAMENTO_B058\"#\"C:\\\\Users\\\\josed\\\\Codes\\\\Dados_diginotas\\\\catalao_scripts\\\\casamento_catalao\\\\docs\\\\ocred\\\\B070\"  # Substitua pelo caminho da sua pasta\n",
     "arquivo_saida = os.path.join(pasta_pdfs, \"dados_label_studio.json\")  # Salva na mesma pasta dos PDFs\n",
     "extrair_texto_pdfs_json(pasta_pdfs, arquivo_saida)\n",
     "\n",
@@ -109,64 +109,80 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pulo: 8\n",
-      "pulo: 8\n",
-      "pulo: 6\n",
-      "pulo: 4\n",
+      "pulo: 5\n",
+      "pulo: 10\n",
+      "pulo: 1\n",
       "pulo: 8\n",
       "pulo: 10\n",
+      "pulo: 10\n",
+      "pulo: 10\n",
+      "pulo: 1\n",
       "pulo: 6\n",
+      "pulo: 4\n",
+      "pulo: 6\n",
+      "pulo: 7\n",
+      "pulo: 4\n",
+      "pulo: 9\n",
+      "pulo: 8\n",
+      "pulo: 4\n",
       "pulo: 3\n",
+      "pulo: 8\n",
+      "pulo: 10\n",
+      "pulo: 1\n",
+      "pulo: 7\n",
+      "pulo: 6\n",
+      "pulo: 7\n",
+      "pulo: 8\n",
       "pulo: 5\n",
       "pulo: 6\n",
-      "pulo: 3\n",
-      "pulo: 7\n",
-      "pulo: 10\n",
-      "pulo: 3\n",
-      "pulo: 7\n",
-      "pulo: 10\n",
-      "pulo: 1\n",
-      "pulo: 3\n",
-      "pulo: 4\n",
-      "pulo: 6\n",
-      "pulo: 2\n",
-      "pulo: 8\n",
-      "pulo: 1\n",
-      "pulo: 9\n",
-      "pulo: 2\n",
-      "pulo: 10\n",
-      "pulo: 6\n",
-      "pulo: 3\n",
-      "pulo: 4\n",
-      "pulo: 8\n",
-      "pulo: 6\n",
-      "pulo: 2\n",
-      "pulo: 3\n",
-      "pulo: 7\n",
-      "pulo: 10\n",
-      "pulo: 6\n",
-      "pulo: 6\n",
-      "pulo: 1\n",
-      "pulo: 9\n",
-      "pulo: 3\n",
-      "pulo: 10\n",
-      "pulo: 2\n",
-      "pulo: 3\n",
-      "pulo: 6\n",
-      "pulo: 7\n",
-      "pulo: 2\n",
-      "pulo: 4\n",
-      "pulo: 4\n",
       "pulo: 1\n",
       "pulo: 5\n",
+      "pulo: 9\n",
+      "pulo: 7\n",
+      "pulo: 2\n",
+      "pulo: 4\n",
       "pulo: 6\n",
+      "pulo: 2\n",
+      "pulo: 9\n",
       "pulo: 6\n",
-      "paginas no diretorio: 327, paginas no Json: 52\n",
-      "Dados em formato JSON salvos em C:\\Users\\josed\\Codes\\Dados_diginotas\\catalao_scripts\\casamento_catalao\\docs\\ocred\\B070\\dados_label_studio.json\n"
+      "pulo: 8\n",
+      "pulo: 2\n",
+      "pulo: 6\n",
+      "pulo: 1\n",
+      "pulo: 8\n",
+      "pulo: 7\n",
+      "pulo: 5\n",
+      "pulo: 3\n",
+      "pulo: 5\n",
+      "pulo: 7\n",
+      "pulo: 10\n",
+      "pulo: 8\n",
+      "pulo: 2\n",
+      "pulo: 6\n",
+      "pulo: 10\n",
+      "pulo: 4\n",
+      "pulo: 2\n",
+      "pulo: 9\n",
+      "pulo: 7\n",
+      "pulo: 7\n",
+      "pulo: 1\n",
+      "pulo: 8\n",
+      "pulo: 3\n",
+      "pulo: 5\n",
+      "pulo: 10\n",
+      "pulo: 7\n",
+      "pulo: 9\n",
+      "pulo: 8\n",
+      "pulo: 4\n",
+      "pulo: 7\n",
+      "pulo: 10\n",
+      "pulo: 4\n",
+      "paginas no diretorio: 472, paginas no Json: 68\n",
+      "Dados em formato JSON salvos em C:\\Users\\josed\\OneDrive\\Documentos\\CASAMENTO_OCRED\\CASAMENTO_B058\\dados_label_studio.json\n"
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 3
   }
  ],
  "metadata": {
